--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 # 3.15.0 (2024-XX-XX)
-
+ 
+ * Add Spanish inflector support for the `plural` and `singular` filters in the String extension
  * Deprecate `TempNameExpression` in favor of `LocalVariable`
  * Deprecate `NameExpression` in favor of `ContextVariable`
  * Deprecate `AssignNameExpression` in favor of `AssignContextVariable`
