--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 # 3.15.0 (2024-XX-XX)
  
+ * [BC BREAK] Fix a security issue in the sandbox mode allowing an attacker to call attributes on Array-like objects
+   They are now checked via the property policy
+ * Fix a security issue in the sandbox mode allowing an attacker to be able to call `toString()`
+   under some circumstances on an object even if the `__toString()` method is not allowed by the security policy
  * Add Spanish inflector support for the `plural` and `singular` filters in the String extension
  * Deprecate `TempNameExpression` in favor of `LocalVariable`
  * Deprecate `NameExpression` in favor of `ContextVariable`
