--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+# 3.11.3 (2024-11-07)
+
+ * Fix an infinite recursion in the sandbox code
+
 # 3.11.2 (2024-11-06)
 
  * [BC BREAK] Fix a security issue in the sandbox mode allowing an attacker to call attributes on Array-like objects
