--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,8 @@
 
 # 3.15.0 (2024-11-17)
  
+ * [BC BREAK] Add support for accessing class constants with the dot operator;
+   this can be a BC break if you don't use UPPERCASE constant names
  * Add Spanish inflector support for the `plural` and `singular` filters in the String extension
  * Deprecate `TempNameExpression` in favor of `LocalVariable`
  * Deprecate `NameExpression` in favor of `ContextVariable`
@@ -25,7 +27,6 @@
  * Fix `power` expressions with a negative number in parenthesis (`(-1) ** 2`)
  * Deprecate instantiating `Node` directly. Use `EmptyNode` or `Nodes` instead.
  * Add support for inline comments
- * Add support for accessing class constants with the dot operator
  * Add `Profile::getStartTime()` and `Profile::getEndTime()`
  * Fix "ignore missing" when used on an "embed" tag
  * Fix the possibility to override an aliased block (via use)
