--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 # 3.17.1 (2024-XX-XX)
 
+ * Fix the null coalescing operator when the test returns null
  * Fix the Elvis operator when used as '? :' instead of '?:'
 
 # 3.17.0 (2024-12-10)
