Add `LastModifiedExtensionInterface` and implementation in `AbstractExtension` to track modification of runtime classes

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,6 @@
 # 3.19.0 (2025-XX-XX)
 
- * n/a
+ * Add `LastModifiedExtensionInterface` and implementation in `AbstractExtension` to track modification of runtime classes
 
 # 3.18.0 (2024-12-29)
 
